# esp8266-irrigation-rest-api

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  boot.py  climate_sensor.py  config.py  install.sh  main.py  pyproject.toml  relay.py  server.py  setup.cfg  soil_sensor.py
